k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-core-postgres
  namespace: bank-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-core-postgres
  template:
    metadata:
      labels:
        app: bank-core-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: bank-core-postgres
  namespace: bank-core
spec:
  selector:
    app: bank-core-postgres
  ports:
    - port: 5432
      targetPort: 5432
  # Solo demo/local. En banco usar RDS PostgreSQL Multi-AZ, no Postgres dentro del cluster.
