k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-core-redis
  namespace: bank-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-core-redis
  template:
    metadata:
      labels:
        app: bank-core-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: bank-core-redis
  namespace: bank-core
spec:
  selector:
    app: bank-core-redis
  ports:
    - port: 6379
      targetPort: 6379
  # Solo demo/local. Para produccion usar ElastiCache Redis en subnets privadas.
