k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-core-app
  namespace: bank-core
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bank-core.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bank-core-app
                port:
                  number: 8080
